[package]
name = "dynfmt"
version = "0.1.0"
authors = ["Jan Michael Auer"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/jan-auer/dynfmt"
homepage = "https://github.com/jan-auer/dynfmt"
documentation = "https://docs.rs/dynfmt"
description = """
A crate for formatting strings dynamically.
"""

[package.metadata.docs.rs]
all-features = true

[dependencies]
erased-serde = "0.3.6"
lazy_static = "1.2.0"
regex = { version = "1.1.0", optional = true }
serde = "1.0.84"
serde_json = { version = "1.0.36", optional = true }

[features]
default = ["json"]
json = ["serde_json"]
python = ["regex"]
curly = ["regex"]
