[package]
name = "dynfmt"
version = "0.1.5"
authors = ["Jan Michael Auer <mail@jauer.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jan-auer/dynfmt"
homepage = "https://github.com/jan-auer/dynfmt"
documentation = "https://docs.rs/dynfmt"
description = """
A crate for formatting strings dynamically.
"""

[package.metadata.docs.rs]
all-features = true

[dependencies]
erased-serde = "0.4"
lazy_static = { version = "1.4", optional = true }
regex = { version = "1", optional = true }
serde = "1"
serde_json = { version = "1", optional = true }
thiserror = "1.0"

[features]
default = ["json"]
json = ["serde_json"]
python = ["regex", "lazy_static"]
curly = ["regex", "lazy_static"]
